<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            tools:ignore="MissingConstraints">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="148dp"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/text"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/textView14"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:gravity="center_vertical"
                            android:hint="@string/nickName"
                            android:textSize="18sp"/>

                    <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:gravity="center_vertical"
                            android:hint="@string/count"
                            android:textSize="18sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textSize="18sp"
                        android:paddingLeft="20dp"
                        android:layout_weight="1"
                        android:text="@string/personalData"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textSize="18sp"
                        android:paddingLeft="20dp"
                        android:layout_weight="1"
                        android:text="@string/mine"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:paddingLeft="20dp"
                        android:text="@string/myCollect"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textSize="18sp"
                        android:paddingLeft="20dp"
                        android:layout_weight="1"
                        android:text="@string/establish"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>