<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            tools:ignore="MissingConstraints">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:background="@color/gray_850"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/register"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="287dp"
                    android:layout_height="77dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView2"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/phoneNumber"
                        android:textSize="18sp"/>

                <EditText
                        android:id="@+id/textView3"
                        android:layout_width="167dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="287dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView4"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/passWord"
                        android:textSize="18sp"/>

                <EditText
                        android:id="@+id/textView5"
                        android:layout_width="165dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="287dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView6"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/surePass"
                        android:textSize="18sp"/>

                <EditText
                        android:id="@+id/textView7"
                        android:layout_width="167dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="98dp"
                    android:layout_height="156dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:text="@string/sure"
                        android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
