<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            tools:ignore="MissingConstraints">

        <LinearLayout
                android:background="@color/gray_850"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/textView20"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:paddingLeft="20dp"
                    android:text="@string/change_nickName"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center_vertical"
                    android:hint="@string/nickName"
                    android:paddingLeft="20dp"
                    android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:orientation="vertical">

            <Button
                    android:id="@+id/button3"
                    android:layout_width="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:background="#0000"
                    android:text="@string/save"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>