<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.dashboard.CollectFragment">

    <ScrollView
            style="@android:style/Widget.DeviceDefault.Light.ScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hapticFeedbackEnabled="false">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                <TextView
                    android:id="@+id/text_person_username"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:clickable="false"
                    android:gravity="center"

                    android:text="美食时间"
                    android:textColor="#1B1A1A"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.74" />

                <ImageView
                        android:id="@+id/image_person_icon"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:scaleType="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.82"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                       />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                <TextView
                        android:id="@+id/text28"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginBottom="8dp"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/person_seeed"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.89"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                <TextView
                        android:id="@+id/text_person_in_time"
                        android:layout_width="52dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:text="@string/intime"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.129"/>

                <TextView
                        android:id="@+id/text_person_speak"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/person_spaek"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.741"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                <LinearLayout
                        android:id="@+id/linear_my_cook"
                        android:layout_width="50dp"
                        android:layout_height="20dp"
                        android:clickable="true"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.58"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <TextView
                            android:id="@+id/text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/person_cook_other"/>

                    <TextView
                            android:id="@+id/text_cook_other_number"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="0"/>
                </LinearLayout>

                <LinearLayout
                        android:id="@+id/linear_perosn_cook"
                        android:layout_width="50dp"
                        android:layout_height="20dp"
                        android:clickable="true"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.36"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <TextView
                            android:id="@+id/text_person_cook_menu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/person_cook"/>

                    <TextView
                            android:id="@+id/text_number_cook"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="0"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp">

                <TextView
                        android:id="@+id/text123"
                        android:layout_width="200dp"
                        android:layout_height="30dp"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/person_long_Show_do"
                        android:textColor="#A85151"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.55"/>

                <TextView
                        android:id="@+id/textView4"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/person_long_Show"
                        android:textSize="22sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.19999999"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>