<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="409dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

            <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="294dp"
                    android:gravity="center"
                    android:textSize="48sp"
                    tools:layout_editor_absoluteY="300dp"/>

            <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_iconfont_voice"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="258dp"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="338dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView8"
                        android:layout_width="121dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/count"
                        android:textColor="#000000"
                        android:textSize="20sp"/>

                <EditText
                        android:id="@+id/textView9"
                        android:layout_width="180dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:maxLength="11"
                        android:maxLines="1"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="336dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView10"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/passWord"
                        android:textColor="#000000"
                        android:textSize="20sp"/>

                <EditText
                        android:id="@+id/textView11"
                        android:layout_width="180dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"
                        android:maxLength="8"
                        android:maxLines="1"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical">

                <CheckBox
                        android:id="@+id/checkBox_login"
                        android:layout_width="115dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="20dp"
                        android:text="记住密码"
                        android:textSize="18dp"/>

                <Button
                        android:id="@+id/button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#0000"
                        android:text="@string/login"
                        android:textColor="#000000"
                        android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


            <TextView
                    android:id="@+id/textView12"
                    android:layout_width="122dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/newCount"
                    android:textColor="@color/chocolate"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>